--- a/article.html
+++ b/article.html
@@ -67,7 +67,7 @@
     <footer id="main-footer" class="py-2">
         <div class="container footer-container">
             <div>
-                <img src="img/logo.png" alt="News">
+                <img src="img/logo_light.png" alt="News">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vero assumenda ipsum.</p>
             </div>
             <div>
