--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="showcase-content">
                     <div class="category category-sports">Sports</div>
                     <h1>Why I Love the Mountains</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid blanditiis laudantium reiciendis eos, illum velit eveniet cumque aliquam accusamus mollitia alias ullam ex maxime hic illo quibusdam ipsa vitae quia?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid blanditiis laudantium reiciendis eos, illum velit eveniet cumque aliquam accusamus mollitia alias ullam ex maxime </p>
                     <a href="article.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
@@ -114,7 +114,7 @@
     <footer id="main-footer" class="py-2">
         <div class="container footer-container">
             <div>
-                <img src="img/logo.png" alt="News">
+                <img src="img/logo_light.png" alt="News">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vero assumenda ipsum.</p>
             </div>
             <div>
